# nix-ipc

./: Cargo.toml  rustfmt.toml
src/: lib.rs  mtx.rs  r_mtx.rs  shm.rs
