[package]
name = "nix-ipc"
version = "0.1.1"
authors = [ "Szabó Boldizsár Márk <szaboboldizsarmark@gmail.com>" ]
edition = "2024"
description = "Crate for Unix interprocess communication"
license = "MIT"
repository = "https://github.com/szaboboldizsarmark/linux-interprocess"

[dependencies]
anyhow = "1.0.100"
nix = { version = "0.30.1", features = ["fs", "mman", "pthread"] }
